Fix some warnings reported by the IDE